# minion-comms

./: PLAN.md  README.md  pyproject.toml
.dead-drop/opus-lead/: session-notes.md
docs/: FRAMEWORK.md  PROTOCOL.md
docs/classes/: builder.md  coder.md  lead.md  oracle.md  recon.md
scripts/: install.sh  poll.sh
src/minion_comms/: __init__.py  server.py
