[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minion-comms"
version = "0.1.0"
description = "Multi-agent coordination server — raid party comms via MCP"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
minion-comms = "minion_comms.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/minion_comms"]
